command descriptions and usage examples