@@ -36,14 +36,17 @@ public class Latest implements Command {
 
     @Override
     public String getHelp() {
-        return "Retrieves the latest animes released in the current season of the year!\nUsage: `" + Constant.PREFIX + getAliases()[0] + "`";
+        return "Explore the top twenty latest anime and manga series being released of the season.\n" +
+                "The latest anime shows come with a trailer component to watch and the latest mangas come with links to the released chapters\n" +
+                "To learn more about each series in detail, use the `/search` command and check out it's components\n" +
+                "Usage: `" + Constant.PREFIX + getAliases()[0] + " [type]`";
     }
 
     @Override
     public CommandData getSlashCmd() {
         return Tools.defaultSlashCmd(this)
                 .addOptions(
-                        new OptionData(OptionType.STRING, "type", "anime / manga", true)
+                        new OptionData(OptionType.STRING, "type", "Select the type of latest series you want to explore.", true)
                                 .addChoice("anime", "anime")
                                 .addChoice("manga", "manga")
                 );
@@ -52,7 +55,7 @@ public class Latest implements Command {
     @Override
     public void run(SlashCommandInteractionEvent event) {
         final List<OptionMapping> options = event.getOptions();
-        final List<String> args = options.stream().map(OptionMapping::getAsString).collect(Collectors.toList());
+        final List<String> args = options.stream().map(OptionMapping::getAsString).toList();
         API api = new API();
         if(args.get(0).equals("anime")) {
             InteractionHook msg = event.replyEmbeds(new EmbedBuilder().setDescription("Getting the `Latest` anime of the season...").build()).complete();
@@ -67,14 +70,14 @@ public class Latest implements Command {
             api.getLatestAnime(msg);
         } else if(args.get(0).equals("manga")) {
             InteractionHook msg = event.replyEmbeds(new EmbedBuilder().setDescription("Getting the `Latest` manga releases...").build()).complete();
-//            Message message = msg.retrieveOriginal().complete();
-//            ScheduledFuture<?> timeout = msg.editOriginalEmbeds(
-//                    new EmbedBuilder()
-//                            .setColor(Color.red)
-//                            .setDescription("No recently released manga were found! Try again later!")
-//                            .build()
-//            ).queueAfter(10, TimeUnit.SECONDS, me -> messageToMangaPage.remove(message.getIdLong()));
-//            messageToMangaPage.put(message.getIdLong(), new MangaPage(null, message, 1, event.getUser(), timeout));
+            Message message = msg.retrieveOriginal().complete();
+            ScheduledFuture<?> timeout = msg.editOriginalEmbeds(
+                    new EmbedBuilder()
+                            .setColor(Color.red)
+                            .setDescription("No recently released manga were found! Try again later!")
+                            .build()
+            ).queueAfter(10, TimeUnit.SECONDS, me -> messageToMangaPage.remove(message.getIdLong()));
+            messageToMangaPage.put(message.getIdLong(), new MangaPage(null, message, 1, event.getUser(), timeout));
             api.getLatestManga(msg);
         }
     }
